--- a/StudyPortal/appsettings.json
+++ b/StudyPortal/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-StudyPortal-c464a2ab-31b2-4283-800a-c9e2dc1ae12a;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:myblogdbserver.database.windows.net,1433;Initial Catalog=study-portal-db;Persist Security Info=False;User ID=admin123;Password=Admin_123qwe!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
